--- a/Aster_To_Settled.html
+++ b/Aster_To_Settled.html
@@ -97,7 +97,7 @@
 
 </div>
 
-<script src="src/main.js"></script>
+<script src="main.js"></script>
 
 <script>
     document.getElementById("convertBtn").addEventListener("click", () => {
