--- a/Settled_To_Aster.html
+++ b/Settled_To_Aster.html
@@ -98,7 +98,7 @@
 
 </div>
 
-<script src="src/main.js"></script>
+<script src="main.js"></script>
 
 <script>
     document.getElementById("convertBtn").addEventListener("click", () => {
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
