--- a/Aster_To_Settled.html
+++ b/Aster_To_Settled.html
@@ -93,7 +93,7 @@
         <input type="text" id="settleTotal" readonly>
     </div>
 
-    <button class="swap" onclick="window.location.href='Settled_To_Aster.html'">Switch to Settled → Aster Mode</button>
+    <button class="swap" onclick="window.location.href='index.html'">Switch to Settled → Aster Mode</button>
 
 </div>
 
