--- a/Aster_To_Settled.html
+++ b/Aster_To_Settled.html
@@ -4,66 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aster Fall Time Converter</title>
-    <style>
-        body {
-            font-family: system-ui, sans-serif;
-            background-color: #0e1116;
-            color: #f0f0f0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .converter {
-            background-color: #1c222b;
-            padding: 2em;
-            border-radius: 1em;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-            width: 340px;
-        }
-        h1 {
-            color: #7cc7ff;
-            text-align: center;
-            margin-bottom: 1.2em;
-        }
-        label {
-            display: block;
-            margin-top: 0.6em;
-        }
-        input {
-            width: 100%;
-            padding: 0.4em;
-            border: none;
-            border-radius: 4px;
-            margin-top: 0.3em;
-        }
-        button {
-            width: 100%;
-            padding: 0.7em;
-            margin-top: 1em;
-            background-color: #7cc7ff;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        button:hover {
-            background-color: #4fa8e6;
-        }
-        .results {
-            margin-top: 1.5em;
-            padding-top: 1em;
-            border-top: 1px solid #444;
-        }
-        .swap {
-            background-color: #2e3b49;
-            color: #7cc7ff;
-        }
-        .swap:hover {
-            background-color: #3c4c5d;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Aster Fall to Settled Galaxy Time Converter</h1>
